# mlops-poc

./: README.md  adaboost.py  adult-pipeline.py  clearml-poc.py  datasets.py  iris-pipeline.py  main.py  neural-net.py  nn-classifier.py  pyproject.toml  random-forest.py  utils.py
