[tool.poetry]
name = "mlops-poc"
version = "0.1.0"
description = "POC for MLOps Tools"
authors = ["Lokesh Mohanty <me.lokeshmohanty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clearml = "^1.16.2"
scikit-learn = "^1.5.1"
numpy = "^2.0.0"
clearml-agent = "^1.8.1"
matplotlib = "^3.9.1"
typer = {extras = ["all"], version = "^0.12.3"}


[tool.poetry.group.dev.dependencies]
clearml-session = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pakage-mode = false
